--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,22 @@
 plugins {
     id 'com.android.application'
+
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.dimaster"
+        applicationId "com.currencty"
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [
+                onesignal_app_id: 'b6d68acb-4d69-4520-b212-829fe7684728',
+                // Project number pulled from dashboard, local value is ignored.
+                onesignal_google_project_number: 'REMOTE'
+        ]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -33,11 +39,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.ads:ads-identifier:1.0.0-alpha04'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+    implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.appsflyer:af-android-sdk:6.3.2'
+
+    implementation 'com.google.android.gms:play-services-games:22.0.1'
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
 
 
     //api
@@ -46,4 +57,11 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor")
     implementation("com.squareup.okhttp3:okhttp")
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
+
+    //AppsFlyer
+    implementation 'com.appsflyer:af-android-sdk:6.3.2'
+
+    //facebook
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
 }
